--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.3"
+    "bcrypt": "^5.0.1",
+    "glob": "^7.2.0",
+    "koa": "^2.13.3",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.1.1",
+    "koa2-cors": "^2.0.6",
+    "mongoose": "^6.0.10"
   }
 }
