--- a/service/package.json
+++ b/service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "glob": "^7.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.3",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
