--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "vant": "^2.12.30",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
